# Eddy3D-GAN-API

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  app.py  download_model.py  pyproject.toml  render.yaml  requirements.txt  test.ipynb
.github/workflows/: huggingface.yml
.jules/: bolt.md
